# raiden

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CLAUDE_QUICKSTART.md  DEVELOPMENT_LOG.md  Dockerfile  README.md  SESSION_STATE.md  demo.py  deploy.sh  fly.toml  mkdocs.yml  pyproject.toml  sjostaden_7zone.idf  sjostaden_7zone_calibrated.idf
.github/workflows/: ci.yml  deploy.yml  docs.yml
benchmarks/: __init__.py  bench_ecm.py  bench_parsing.py
data/input/: BRF_Sjostaden_2.json
docs/: ACCURACY_ROADMAP_2026.md  ARCHETYPE_MATCHING_PIPELINE.md  BATTLE_PLAN.md  CALIBRATION_SYSTEM.md  DISTRIBUTED_EPLUS.md  ECM_IMPLEMENTATION_PLAN.md  ORCHESTRATOR.md  PIPELINE_GAP_ANALYSIS.md  PIPELINE_POLISH_PLAN.md  RAIDEN_2026_ROADMAP.md  STRATEGIC_INSTRUCTION_MUBES_INTEGRATION.md  SYSTEM_MAP.md  index.md
docs/api/: baseline.md  ecm.md  geometry.md  simulation.md
docs/development/: contributing.md  testing.md
docs/getting-started/: installation.md  quickstart.md
docs/guide/: archetypes.md  baseline.md  calibration.md  ecm.md
examples/: sample_portfolio.csv
examples/sjostaden_2/: BRF_Sjostaden_2.geojson  BRF_Sjostaden_2_enriched.json  analysis_report.html  (+6 more)
output_final/: eplusout.eio  eplustbl.csv
scripts/: benchmark_accuracy.py  build_archetype_cache.py  demo_full_brf_analysis.py  export_idf.py  export_idf_simple.py  process_sjostaden.py  run_full_pipeline_sjostaden.py  run_production_pipeline.py  run_production_pipeline_v2.py  run_sjostaden_analysis.py  test_archetype_matching.py  test_end_to_end.py  test_enhanced_streetview.py  test_extraction.py  test_full_pipeline.py  test_geometry.py  test_google_streetview.py  test_mapillary_all.py  test_material_v2.py  test_multizone_grynnan.py  test_streetview_footprint.py  train_all_surrogates.py  train_surrogate_library.py
src/: __init__.py  cli.py
tests/: __init__.py  conftest.py  test_api.py  test_archetypes.py  test_calibration.py  test_calibrator.py  test_costs_v2.py  test_database.py  test_dependencies.py  test_e2e_pipeline.py  test_ecm_modifiers.py  test_generator_v2.py  test_hvac_schedules.py  test_idf_parser.py  test_integration.py  test_orchestrator.py  test_planning.py  test_pv_potential.py  test_reporting.py  test_results.py  test_runner.py  test_utils.py
(+187 files in other folders)
